Poker Model updated to be playable by the controller